WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309012
[Site Isolation][Debug] Fix LockdownMode.WorkerFontParsedViaSafeFontParser
https://bugs.webkit.org/show_bug.cgi?id=309012
Summary
[Site Isolation][Debug] Fix LockdownMode.WorkerFontParsedViaSafeFontParser
Sihui Liu
Reported
2026-03-02 14:48:25 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-02 14:51:26 PST
<
rdar://problem/171561867
>
Sihui Liu
Comment 2
2026-03-02 15:07:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59745
EWS
Comment 3
2026-03-03 09:18:48 PST
Committed
308554@main
(4d8c985a556c): <
https://commits.webkit.org/308554@main
> Reviewed commits have been landed. Closing PR #59745 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug